# blynk-raspberrypi

./: LICENSE  README.md  pyproject.toml
blynk_raspberrypi/: __init__.py  system_metrics.py
etc/: blynk-raspberrypi.conf
tests/: test_blynk_raspberrypi.py
usr/lib/systemd/system/: blynk-system-metrics.service
