[tool.poetry]
name = "blynk-raspberrypi"
version = "0.2.0"
description = "Blynk client for Raspberry Pi"
authors = ["Viktor Ryzhaiev <izod89@gmail.com>"]
repository = "https://github.com/vryzhaiev/blynk-raspberrypi"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
blynklib = { git = "https://github.com/vryzhaiev/lib-python.git" }
gpiozero = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
blynk-system-metrics = 'blynk_raspberrypi.system_metrics:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
